--- a/main.html
+++ b/main.html
@@ -7,7 +7,13 @@
 
   <body>
     <!-- write the body here -->
-
+	  <form>
+		  <label for="age">Age: </label>
+		  <input type="number" id="age" />
+		   <label for="name">Name: </label>
+		  <input type="text" id="name" />
+		  <input type="submit" id="btn" />
+	  </form>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
