--- a/main.html
+++ b/main.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Voting Eligibility</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <form>
+        <label for="age">Age: </label>
+        <input type="number" id="age" required>
 
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+        <label for="name">Name: </label>
+        <input type="text" id="name" required>
 
-  <body>
-    <!-- write the body here -->
-	  <form>
-		  <label for="age">Age: </label>
-		  <input type="number" id="age" />
-		   <label for="name">Name: </label>
-		  <input type="text" id="name" />
-		  <input type="submit" id="btn" />
-	  </form>
-    <script type="text/javascript" src="./script.js"></script>
-  </body>
+        <button id="btn" type="button">Submit</button> 
+    </form>
+
+    <script src="script.js"></script> 
+</body>
 </html>
